--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,6 +2,6 @@
   <div class="logo"></div>
   <ul nz-menu nzTheme="dark" nzMode="horizontal">
     <li routerLink="/" nz-menu-item>Home</li>
-    <li nzDisabled="true" nz-menu-item>Recipies</li>
+    <li routerLink="/search" nz-menu-item>Recipies</li>
   </ul>
 </nz-header>
