--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,18 @@
 <div *ngFor="let r of this.recipie.recipes">
   <br />
-  <app-recipie-card
-    [cardTitle]="r.title"
-    [imageUrl]="r.image"
-    [servesNumber]="r.servings"
-    [readyInMinutes]="r.readyInMinutes"
-    [likes]="r.aggregateLikes"
-    [pricePerServe]="r.pricePerServing"
-    [recipieId]="r.id"
-  ></app-recipie-card>
+  <div nz-row>
+    <div nz-col nzSpan="2"></div>
+    <div nz-col nzSpan="20">
+      <app-recipie-card
+        [cardTitle]="r.title"
+        [imageUrl]="r.image"
+        [servesNumber]="r.servings"
+        [readyInMinutes]="r.readyInMinutes"
+        [likes]="r.aggregateLikes"
+        [pricePerServe]="r.pricePerServing"
+        [recipieId]="r.id"
+      ></app-recipie-card>
+    </div>
+    <div nz-col nzSpan="2"></div>
+  </div>
 </div>
