--- a/src/app/components/recipie-instruction/recipie-instruction.component.html
+++ b/src/app/components/recipie-instruction/recipie-instruction.component.html
@@ -12,7 +12,7 @@
       "
     >
       <img
-        style="border-radius: 25px"
+        style="border-radius: 25px; max-width: 500px"
         class="fw"
         nz-image
         nzSrc="{{ recipieInfo.image }}"
